--- a/source/css/module/card.scss
+++ b/source/css/module/card.scss
@@ -17,7 +17,10 @@
   &--single {
     max-width: 520px;
     margin: auto;
-    padding-right: $inuit-base-spacing-unit;
+
+    @include break(not-small) {
+      padding-right: $inuit-base-spacing-unit;
+    }
   }
 
   &__owner {
